# BT-Resume

./: .gitignore  .webui_secret_key  API_DOCUMENTATION.md  APPLICATION_STARTUP_ANALYSIS.md  BUILDING.md  CHANGELOG.md  DATA_FLOW_FIX_REPORT.md  DEVELOPMENT_LOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTATION_GUIDE.md  LAUNCHER_GUIDE.md  LLM_PIPELINE.md  MIGRATION_GUIDE.md  MODERN_RESUMES_WIRING_CHECK.md  MODULAR_ARCHITECTURE.md  PATH_RESOLUTION_FIX.md  POLISH_FIXES_IMPLEMENTED.md  POLISH_IMPLEMENTATION_CRITIQUE.md  POLISH_RESUME_TEST_REPORT.md  PRIORITY1_FIXES_COMPLETE.md  README.md  ResumeAI.iss  START_APP.bat  START_APP.ps1  app_window.py  build.bat  build.ps1  check_models.py  debug_parsing.py  debug_pdf_text.py  examples_alteration_system.py  input_parser.py  llm_client.py  main.py  output_builder.py  pdf_generator.py  prompts.py  pyproject.toml  requirements.txt  (+16 more)
.github/workflows/: build.yml  release.yml
backend/: __init__.py  app.py  config.py  wsgi.py
backend/routes/: resume_routes.py  track_routes.py
backend/services/: alteration_service.py  file_service.py  job_tailor_service.py  llm_service.py  llm_service_deprecated.py  ollama_service.py
btr/: cli.py
core/: generate_resume.py  input_parser.py  llm_client.py  output_builder.py  pdf_generator.py  pdf_generator_backup.py  prompts.py  resume_grader.py  resume_model.py  setup_wizard.py  state.py  utils.py
core/prompts/: job_prompts.py
docs/: E2E_TEST_RESULTS.md  FRONTEND_TAILOR_TEST_REPORT.md  JOB_TAILOR_COMPLETE.md  JOB_TAILOR_INTEGRATION_REPORT.md  LLM_AUDIT_FINAL_REPORT.md  LLM_AUDIT_REPORT.md  QUICK_START_JOB_TAILOR.md  TEST_REPORT_JOB_TAILOR_CHECK.txt
feedback/: feedback.jsonl
flutter_app/: .gitignore  FLUTTER_SETUP.md  README.md  UI_SYSTEM.md  build_output.txt  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt  build.py
gui/: app.py  bullet_polish_panel.py  experience_panel.py  job_tailor_panel.py  resumes_panel.py
outputs/: integration_test_resume_backup.json
samples/: job.txt  resume.txt
static/css/: style.css
templates/: base.html  bullet_polish.html  experience.html  index.html  job_tailor.html  resumes.html
web/: index.html  package-lock.json  package.json  vite.config.ts
(+81 files in other folders)
